# crewcig

CrewAI_Competitive_Insights_Github_Deployment/: README.md  pyproject.toml
CrewAI_Competitive_Insights_Github_Deployment/src/Competitive_insights_generator/: crew.py  main.py
CrewAI_Competitive_Insights_Github_Deployment/src/Competitive_insights_generator/config/: agents.yaml
CrewAI_Competitive_Insights_Github_Deployment/src/similar_company_finder_template/: crew.py  main.py
CrewAI_Competitive_Insights_Github_Deployment/src/similar_company_finder_template/config/: tasks.yaml
